# Qt_Server_Test

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Server/: CMakeLists.txt  main.cpp
Server/src/: clientcontroller.cpp  clientcontroller.h  clientmodel.cpp  clientmodel.h  clientview.cpp  clientview.h  listener.cpp  listener.h  mainwindow.cpp  mainwindow.h
